# magent

./: .eslintignore  .eslintrc.js  .gitignore  .npmrc  .prettierignore  .vercelignore  LICENSE  README.md  README.zh-CN.md  jest.config.mjs  package.json  pnpm-workspace.yaml  pyproject.toml
.changeset/: chatty-eggs-punch.md  config.json  dry-poets-confess.md  eight-turkeys-yawn.md  light-wasps-talk.md  mighty-carrots-protect.md  nice-wombats-drive.md  plenty-seahorses-fry.md  serious-chairs-help.md  seven-chicken-care.md  spotty-ligers-occur.md  violet-planes-repeat.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  post_create_command.sh  post_start_command.sh
api/: README.md  api_config.py  config.py  config.toml  db.py  log_config.toml  main.py  package.json  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 4e5a7e7597b2_delete_sub_config_table_add_config_.py  55f5817d7b97_migrate_conversation_table.py  56a0662597cd_initial_migration.py  5918599719a1_fix_spelling.py  5daae45cc6b5_.py  8344684f32dd_added_agent_bot.py  9db9c74ab460_add_conversation_created_by.py  a7a038514b7c_add_knowledge_table.py  ac21c38c5e56_add_plugin_table.py  d20082bb8fe6_refactor_agent_configs.py  df31d751e3d7_update_plugin_api_table.py  e788b6ece584_knowledge_config_table_add_config_type_.py  f3069f28699a_update_plugin_table.py  f54e1fc0bd90_update_plugin_config_table.py  fde732bae2fb_conversation_database_model.py
api/constants/: constant.py
api/core/: agent.py  agent_manager.py  agent_provider.py  api_tool.py  au_agent_provider.py  base.py  chat.py  langchain_agent_provider.py  task.py
api/core/chat_executor/: __init__.py  executor.py  item.py  object.py  object_manager.py  openai.py  openai_chat_executor.py  provider.py  utils.py
api/core/conversation/: message.py  record.py
api/dao/: account.py  agent.py  chat.py  knowledge.py  plugin.py
api/models/: __init__.py  account.py  agent.py  agent_bot.py  agent_config.py  chat.py  conversation.py  knowledge.py  knowledge_config.py  plugin.py  plugin_api.py  plugin_config.py
api/routers/: main.py
api/routers/account/: crud.py  router.py
api/routers/agent/: crud.py  router.py
api/routers/chat/: crud.py  router.py
api/routers/conversation/: crud.py  router.py
api/routers/knowledge/: router.py
api/routers/plugin/: crud.py  router.py
api/services/: account.py  agent.py  chat.py  knowledge.py  plugin.py
api/tests/: conftest.py
apps/docs/: .dumirc.ts
docker/: docker-compose-dev.yaml  docker-compose.yaml
docs/: CONTRIBUTING.md
examples/: agentuniverse_ui_application.py
examples/langchain-example/: MANIFEST.in  README.md  openai_agent.ipynb  openai_chain.ipynb  openai_libro_agent.ipynb  openai_llm.ipynb  pyproject.toml  tongyi_libro_agent.ipynb
examples/langchain-example/src/langchain_example/: dev.py  interpreter.py  libro_agent.py  tongyi.py
web/: jest.config.mjs
(+804 files in other folders)
