[project]
name = "magent-api"
version = "0.1.0"
description = "magent-api server"
authors = [
    { name = "brokun", email = "brokun0128@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "pydantic>=2.7.3",
    "pydantic-settings>=2.3.2",
    "psycopg2-binary>=2.9.9",
]
readme = "README.md"
requires-python = ">=3.8.1,<3.12"

[tool.rye]
managed = true

[tool.rye.scripts]
dev = "uvicorn main:app --reload"



[tool.setuptools]
py-modules = []
