[project]
name = "magent-api"
version = "0.1.0"
description = "magent-api server"
authors = [{ name = "brokun", email = "brokun0128@gmail.com" }]
dependencies = [
  "fastapi>=0.111.0",
  "sqlalchemy>=2.0.25",
  "alembic>=1.13.1",
  "pydantic>=2.7.3",
  "pydantic-settings>=2.3.2",
  "psycopg2-binary>=2.9.9",
  "fastapi-pagination>=0.12.25",
  "langchain>=0.1.20",
  "langchain-community>=0.0.38",
  "sse-starlette>=2.1.2",
  "agentuniverse>=0.0.11",
  "langchain_openai",
]
readme = "README.md"
requires-python = ">=3.8.1"

[tool.rye]
managed = true

[tool.rye.scripts]
dev = "uvicorn main:app --reload"


[tool.setuptools]
py-modules = []
